Code Correction and refactoring.

--- a/todoUI/src/app/create-todo/create-todo.component.html
+++ b/todoUI/src/app/create-todo/create-todo.component.html
@@ -3,7 +3,7 @@
   <form (ngSubmit)="onSubmit()">
     <div class="form-group">
       <label for="name">Task Id</label>
-      <input ngModel  required type="text" class="form-control" id="taskId"  [(ngModel)]="todo.taskId" name="taskId" >
+      <input required type="text" class="form-control" id="taskId"  [(ngModel)]="todo.taskId" name="taskId" >
     </div>
 
     <div class="form-group">
