--- a/todoUI/src/app/update-todo/update-todo.component.html
+++ b/todoUI/src/app/update-todo/update-todo.component.html
@@ -18,12 +18,12 @@
 
     <div class="form-group">
       <label for="name">Created Date</label>
-      <input [disabled]="true" type="text" class="form-control" id="createdDate" required [(ngModel)]="todo.createdDate" name="createdDate">
+      <input [disabled]="true" type="text" class="form-control" id="createdDate" required [ngModel]="todo.createdDate | date: 'dd/MM/yyyy hh:mm:ss'" name="createdDate">
     </div>
 
     <div class="form-group">
       <label for="name">Last Updated Date</label>
-      <input [disabled]="true" type="text" class="form-control" id="lastUpdatedDate" required [(ngModel)]="todo.lastUpdatedDate" name="lastUpdatedDate">
+      <input [disabled]="true" type="text" class="form-control" id="lastUpdatedDate" required [ngModel]="todo.lastUpdatedDate | date: 'dd/MM/yyyy hh:mm:ss'" name="lastUpdatedDate">
     </div>
 
     
